UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Approval_Delegation_History__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Delegation_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Delegation_End_Time__c</fullName>
        <label>Delegation End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Delegation_Start_Time__c</fullName>
        <label>Delegation Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Active_delegator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active  delegator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Delegation_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>predict__c</fullName>
        <label>predict</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Delegation History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_User__c</columns>
        <columns>Phoenix_Delegated_Approver__c</columns>
        <columns>Phoenix_Delegation_Start_Time__c</columns>
        <columns>Phoenix_Delegation_End_Time__c</columns>
        <columns>Phoenix_Is_Active_delegator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Active_delegator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ApprovalDelegation-{000000}</displayFormat>
        <label>User Delegation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Delegation History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>